--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <header>
                     <h1>Eu sei que eu vou te amar</h1>
                     Por 
-                     <p><a href="https://pt.wikipedia.org/wiki/Antônio_Carlos_Jobim" target="_blank">Antoni Carlos Jobim e Vinícius de Moraes</a></p>
+                     <p><a href="https://pt.wikipedia.org/wiki/Antônio_Carlos_Jobim" target="_blank">Antônio Carlos Jobim e Vinícius de Moraes</a></p>
                 </header>
 
             <section class="normal">
